@@ -1,5 +1,11 @@
 2008-08-16  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/buildbot/changes.py: added support for the
+	content-transfer-encoding header as it is used in some emails; also
+	fixed discovery of last line in translator messages.
+
+2008-08-16  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/buildbot/status/web/__init__.py: fixed slave header tooltip
 	to report all current builds, not just the first one.
 
